# puzzleSolver

./: Dockerfile  Dockerfile_rosbag  Makefile  README.md  docker_entrypoint.sh  package.xml  pyproject.toml  pytest.ini  setup.cfg  setup.py  solution.launch
benchmarking/: timing_backtracking_solver.py
data/: edge_match_matrices.pkl
eval/: eval_backtracking.py  eval_backtracking_solver.py  eval_edge_match_heatmap.py  eval_edge_matcher.py  eval_edge_matching_production_data.py  eval_ground_truth.py  eval_linprog_piece_placer.py  eval_linprog_piece_placer_real_data.py  eval_piece_placer.py  eval_piece_placer_real_data.py  util.py
notebooks/: generator.ipynb  points_to_grid.ipynb
rosbag/: record_or_play.sh
solution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/edge_matcher/: test_edge_matcher_bitmap.py  test_edge_matcher_euclidean.py  test_edge_matcher_frechet.py  test_edge_matcher_hausdorf.py
test/model/: test_edge.py  test_middle_point.py  test_puzzle_piece.py
test/solver/: assert_puzzle_solved.py  test_backtracking_solver.py  test_gradient_solver.py  test_puzzle_context.py
