[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "solution"
version = "0.0.1"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "tabulate==0.9.0",
  "numpy==2.2.4",
  "opencv-contrib-python-headless==4.11.0.86", # TODO: look if a smaller package can do what is needed (used in: bitmap & hausdorff edge matcher)
  "matplotlib==3.10.1", # TODO: look if this is really needed in prod (used in bitmap edge matcher)
  "frechetdist==0.6", #  TODO: look if there isn't an alternative package that is available as a debian package, e.g. `apt install python3-xyz`
  "websockets==15.0.1",
  "torch==2.7.0",
  "munkres==1.1.4",
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "mypy==1.15.0",
  "pylint==3.3.6",
  "pytest==8.3.5",
  "pytest-benchmark==4.0.0",
  "networkx==3.4.2",
  "pygraphviz==1.14",
  "types-tabulate==0.9.0",
  "rclpy-intellisense==1.2.0",
  "pandas==2.2.3",
  "plotly==6.1.1",
  "cv-bridge==1.13.0.post0",
]

[tool.setuptools]
packages = ["puzzle_solver"]

[tool.mypy]
explicit_package_bases = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
local_partial_types = true
strict_equality = true
ignore_missing_imports = true

[tool.pylint.main]
source-roots = ["."]

[tool.pylint."messages control"]
disable = [
  "too-few-public-methods",
  "fixme",
  "too-many-locals",
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
]

[tool.pylint.TYPECHECK]
extension-pkg-allow-list = ["cv2"]
